--- a/css/custom_styles.css
+++ b/css/custom_styles.css
@@ -33,9 +33,14 @@
     font-weight: 800;
 }
 
-.nav-link {
+.navbar .nav-link {
     color: white !important;
     font-size: 14px;
+}
+
+.card-header {
+    color: var(--demetra-darkblue) !important; 
+    background: var(--demetra-lightpink) !important; 
 }
 
 /* Style slider */
