--- a/css/custom_styles.css
+++ b/css/custom_styles.css
@@ -30,7 +30,7 @@
 .navbar-brand {
     color: white !important;
     font-size: 16px;
-    font-weight: 800;
+    font-weight: 700;
 }
 
 .navbar .nav-link {
@@ -39,7 +39,7 @@
 }
 
 .card-header {
-    color: var(--demetra-darkblue) !important; 
+    /* color: var(--demetra-darkblue) !important; */
     background: var(--demetra-lightpink) !important; 
 }
 
